# SilentDragonLite

./: .gitignore  .travis.yml  DEVELOPING.md  LICENSE  README.md  Silentdragonlite_resource.rc  application.qrc  build.sh  compile_commands.json  linux-static-build.sh  silentdragon-lite.pro  win-static-build.sh
lib/: Cargo.toml  Makefile
lib/src/: lib.rs
res/: Info.plist  SilentDragonLite.xpm  logo.icns  silentdragonlite_de.ts  silentdragonlite_fr.qm  silentdragonlite_hr.ts  silentdragonlite_it.qm  silentdragonlite_it.ts  silentdragonlite_pt.qm  silentdragonlite_zh.qm  silentdragonlite_zh.ts  zec_qt_wallet_de.qm  zec_qt_wallet_de.ts  zec_qt_wallet_es.ts  zec_qt_wallet_fr.ts  zec_qt_wallet_hr.qm  zec_qt_wallet_it.ts  zec_qt_wallet_pt.ts  zec_qt_wallet_sr.qm  zec_qt_wallet_sr.ts  zec_qt_wallet_template.ts  zec_qt_wallet_tr.qm  zec_qt_wallet_tr.ts  zec_qt_wallet_zh.ts
src/: about.ui  addresscombo.cpp  balancestablemodel.cpp  balancestablemodel.h  camount.cpp  camount.h  chattablemodel.cpp  chattablemodel.h  connection.cpp  connection.h  connection.ui  controller.cpp  controller.h  createhushconfdialog.ui  liteinterface.cpp  liteinterface.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recurring.cpp  requestdialog.cpp  sendtab.cpp  settings.cpp  settings.h  settings.ui  txtablemodel.cpp  version.h  websockets.cpp
src/scripts/: control  desktopentry  dobuild.ps1  dotranslations.sh  dounifiedbuild.ps1  mkmacdmg.sh  mkrelease.sh  mkwininstaller.ps1  signbinaries.sh  zec-qt-wallet.wxs
